# polyfill

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
cmake/: yk-polyfill-config.cmake.in
include/yk/polyfill/: bit.hpp  config.hpp  functional.hpp  indirect.hpp  memory.hpp  optional.hpp  polymorphic.hpp  tuple.hpp  type_traits.hpp  utility.hpp  variant.hpp
include/yk/polyfill/bits/: allocator_is_always_equal.hpp  apply.hpp  apply_detail.hpp  cond_trivial_smf.hpp  constexpr_swap.hpp  core_traits.hpp  function_wrapper.hpp  invoke.hpp  optional_common.hpp  optional_detail.hpp  swap.hpp  trivial_base.hpp
include/yk/polyfill/bits/function_wrapper/: common.hpp  function_ref.hpp  function_ref.ipp
include/yk/polyfill/cxx11/: apply.hpp  conjunction.hpp  disjunction.hpp  exchange.hpp  integer_sequence.hpp  integral_constant.hpp  invoke.hpp  is_bounded_array.hpp  is_null_pointer.hpp  is_swappable.hpp  is_swappable_with.hpp  is_unbounded_array.hpp  make_unique.hpp  negation.hpp  remove_cvref.hpp  void_t.hpp
include/yk/polyfill/cxx11/extension/: specialization_of.hpp
include/yk/polyfill/cxx23/: constant_wrapper.hpp
include/yk/polyfill/extension/: always_false.hpp  ebo_storage.hpp  invocable_traits.hpp  is_convertible_without_narrowing.hpp  pack_indexing.hpp  specialization_of.hpp  toptional.hpp
test/: CMakeLists.txt
test/cxx11/: CMakeLists.txt  apply.cpp  bit_cast.cpp  conjunction.cpp  constexpr_swap.cpp  disjunction.cpp  exchange.cpp  function_ref.cpp  indirect.cpp  integer_sequence.cpp  integral_constant.cpp  invocable_traits.cpp  invoke.cpp  is_bounded_array.cpp  is_convertible_without_narrowing.cpp  is_nothrow_convertible.cpp  is_null_pointer.cpp  is_swappable.cpp  is_swappable_with.cpp  is_unbounded_array.cpp  make_unique.cpp  negation.cpp  optional.cpp  polymorphic.cpp  reference_from_temporary.cpp  remove_cvref.cpp  toptional.cpp  unique_ptr.cpp  variant.cpp  void_t.cpp
test/cxx14/: CMakeLists.txt  constexpr_swap.cpp  optional.cpp  toptional.cpp  variant.cpp
test/cxx17/: CMakeLists.txt  constant_wrapper.cpp  function_ref.cpp  invocable_traits.cpp  optional.cpp  toptional.cpp  variant.cpp
test/cxx20/: CMakeLists.txt  constant_wrapper.cpp  function_ref.cpp  indirect.cpp  optional.cpp  polymorphic.cpp  toptional.cpp  unique_ptr.cpp  variant.cpp
test/cxx23/: CMakeLists.txt  constant_wrapper.cpp
